-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.0.0, Lustre 2.1.0
-
None
-
3
-
4015
It seems that top locks cache is not killing locks that don't have any valid sublocks left, so this cache for actively used files grows to tens of locks easily slowing everything down.
To make things worse, sometimes these useless locks are matched against really wanted locks, but the cached lock is wider, so we try to enqueue a lock much wider than we actually need which leads to even more of a slowdown with shared file access.