LU-82 Remove useless clio locks

A CLS_NEW toplock must be deleted also if the last sublock is being deleted.

Signed-off-by: Jinshan Xiong <jay@whamcloud.com>
Change-Id: I9831ab534ae222fe74ebaf34faafe00bf3d18cb7
Reviewed-on: http://review.whamcloud.com/305
Tested-by: Hudson
Reviewed-by: Oleg Drokin <green@whamcloud.com>